# rmevo

./: .gitignore  .readthedocs.yml  README.md  module_requirements.md  requirements.txt  versions.md
doc/paper/: rmevo.tex
docs/: .gitignore  requirements.txt
docs/doxygen/: Doxyfile
docs/source/: conf.py  index.rst  intro.rst  packages.rst
docs/sphinx/: requirements.txt
docs/sphinx/source/: api.rst  conf.py  index.rst  intro.rst  packages.rst  readme_link.rst
docs/sphinx_ros/sphinx_ros/: directives.py
src/centipede_description/: CMakeLists.txt  package.xml
src/centipede_description/launch/: centipede.launch  simplified_centipede.launch
src/centipede_description/urdf/: body.urdf  body.urdf.xacro  centipede.gazebo  centipede.sdf  centipede.urdf  centipede.urdf.xacro  centipede2.urdf  leg.urdf  leg2.urdf  leg2.urdf.xacro  macros.xacro  simplified_centipede.urdf  simplified_centipede.urdf.xacro  simplified_leg.urdf
src/centipede_gazebo/: CMakeLists.txt  package.xml
src/centipede_gazebo/launch/: empty_world.launch
src/centipede_gazebo/plugins/: generator.cpp  generator_plugin.cpp
src/centipede_gazebo/worlds/: empty_world.world
src/centipede_generator/: CMakeLists.txt  package.xml
src/centipede_generator/include/centipede_generator/: generator_node.hpp
src/centipede_generator/src/: generator_node.cpp
src/factory/: CMakeLists.txt  package.xml
src/factory_ros/: CMakeLists.txt  package.xml  setup.py
src/factory_ros/pyfactory/: __init__.py  factory.py  parser.py  rmevo_bot.py  rmevo_module.py
src/factory_ros/pyfactory/SDF/: __init__.py  geometry.py  inertial.py  joint.py  link.py  pose.py  rmevo_bot_sdf_builder.py  sensor.py
src/factory_ros/pyfactory/custom_logging/: logger.py
src/factory_ros/src/: run_factory.py
src/factory_ros/srv/: ImportModules.srv  OutputString.srv
src/factory_ros/test/: sdf_from_yaml_test.py
src/pyrmevo/SDF/: geometry.py  link.py  pose.py  rmevo_bot_sdf_builder.py  sensor.py
src/pyrmevo/config_evo/manager/: test1.py
src/pyrmevo/rmevo_bot/: __init__.py  body.py  rmevo_bot.py
src/pyrmevo/rmevo_bot/measure/: measure_body.py
src/rmevo/: .gitignore  CMakeLists.txt  package.xml  requirements.txt  rmevo.py  setup.py
src/rmevo/gazebo/launch/: empty_world.launch
src/rmevo/gazebo/plugins/: world_control.cc
src/rmevo/gazebo/worlds/: empty_world.world
src/rmevo/pyrmevo/: config.py  experiment_management.py  parser.py
src/rmevo/pyrmevo/SDF/: __init__.py  inertial.py  joint.py  rmevo_bot_sdf_builder.py
src/rmevo/pyrmevo/angle/manage/: world.py
src/rmevo/pyrmevo/config_evo/manager/: test1.py  test2.py  test3.py
src/rmevo/pyrmevo/custom_logging/: logger.py
src/rmevo/pyrmevo/evolution/: fitness.py  individual.py  population.py
src/rmevo/pyrmevo/evolution/pop_management/: steady_state.py
src/rmevo/pyrmevo/factory/: factory_manager.py
src/rmevo/pyrmevo/gazebo/: WorldLink.py  gazebo_manager.py
src/rmevo/pyrmevo/genotype/plasticoding/: initialization.py  plasticoding.py
src/rmevo/pyrmevo/genotype/plasticoding/crossover/: crossover.py  rmevo_crossovers.py  standard_crossover.py
src/rmevo/pyrmevo/genotype/plasticoding/mutation/: mutation.py  rmevo_mutations.py  standard_mutation.py
src/rmevo/pyrmevo/rmevo_bot/: __init__.py  body.py  factory.py  neural_net.py  rmevo_bot.py  rmevo_module.py
src/rmevo/pyrmevo/rmevo_bot/brain/: base.py  brain_nn.py
src/rmevo/pyrmevo/rmevo_bot/measure/: measure_body.py
src/rmevo/pyrmevo/rmevo_bot/render/: render.py
src/rmevo/pyrmevo/tol/manage/: measures.py  robotmanager.py  world.py
src/rmevo/pyrmevo/tol/scenery/: birth_clinic.py  wall.py
src/rmevo/pyrmevo/tol/spec/: body.py  brain.py  robot.py
src/rmevo/rmevo_manager/: test2.py
src/rmevo/src/: factory_info.py  run_rmevo.py
src/rmevo/srv/: FitnessEvaluation.srv  RobotConfiguration.srv
src/rmevo/test/: centipede.yaml  neural_revolve.yaml  robot1.sdf  robot2.sdf  robot_centipede.sdf  twomodules.yaml
src/rmevo/test/modules/: joint.sdf  leg.sdf  upper_leg.sdf  upper_leg.urdf  upper_leg.urdf (copia).xacro
src/rmevo/test/modules/basic/: Core.sdf  joint.sdf  module.sdf  upper_leg.sdf
src/rmevo_example/: CMakeLists.txt  package.xml
src/rmevo_example/launch/: rock_world.launch
src/rmevo_example/modules/: arm.sdf  elbow.sdf  tool.sdf
src/rmevo_example/src/: example_run.py
src/rmevo_example/worlds/: example_control.cc  rock_world.world
src/rmevo_example/worlds/models/rock/: model.sdf
src/rmevo_example/worlds/models/rock/materials/scripts/: model.material
src/rmevo_example/worlds/models/rock/meshes/: FallingRock01.dae
src/rmevo_gazebo/: CMakeLists.txt  package.xml
src/rmevo_gazebo/launch/: empty_world.launch
src/rmevo_gazebo/plugins/: world_control.cc
src/rmevo_gazebo/test/: test_fitness_eval.py
src/test/: basic.yaml  basic_revolve.yaml  neural_rmevo.yaml  robot.sdf
src/test/modules/: module.sdf  upper_leg.urdf.xacro
