<?xml version="1.0"?>
<package format="2">
  <name>centipede_gazebo</name>
  <version>1.0.0</version>
  <description>Centipede robot gazebo package</description>
  <maintainer email="jorge@todo.todo">jorge</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
