<?xml version="1.0"?>
<package format="2">
  <name>factory</name>
  <version>0.1.0</version>
  <description>Package with the RMEvo software</description>
  <maintainer email="jorge@todo.todo">jorge</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
</package>
