<?xml version="1.0"?>
<package format="2">
  <name>rmevo</name>
  <version>0.1.0</version>
  <description>Package with the RMEvo software</description>
  <maintainer email="jorge@todo.todo">jorge</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>roscpp</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
